server/server-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-master
  labels:
    app: server
    role: master
    tier: backend
spec:
  ports:
    # the port that this service should serve on
  - port: 3000
    targetPort: 3000
  selector:
    app: server
    role: master
    tier: backend
